@@ -25,6 +25,9 @@ class OAuth2Adapter(object):
     redirect_uri_protocol = None  # None: use ACCOUNT_DEFAULT_HTTP_PROTOCOL
     access_token_method = 'POST'
     login_cancelled_error = 'access_denied'
+    scope_delimiter = ' '
+    basic_auth = False
+    headers = None
 
     def get_provider(self):
         return providers.registry.by_id(self.provider_id)
@@ -68,7 +71,10 @@ class OAuth2View(object):
                               self.adapter.access_token_method,
                               self.adapter.access_token_url,
                               callback_url,
-                              scope)
+                              scope,
+                              scope_delimiter=self.adapter.scope_delimiter,
+                              headers=self.adapter.headers,
+                              basic_auth=self.adapter.basic_auth)
         return client
 
 
