@@ -1,3 +1,7 @@
+2015-12-28  Raymond Penners  <raymond.penners@intenct.nl>
+
+	* Wendy Edwards contributed Reddit support, thanks!
+
 2015-11-09  Raymond Penners  <raymond.penners@intenct.nl>
 
 	* Version 0.24.1 released: non-test code accidentally had test
